--- a/react_ordering_app/package.json
+++ b/react_ordering_app/package.json
@@ -7,8 +7,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@mui/material": "^5.0.6",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
